fix(mail-list): only show sender on mobile

--- a/src/pages/app/index.css
+++ b/src/pages/app/index.css
@@ -106,6 +106,6 @@ p a:hover {
     display: none;
   }
   .mail-actions .action-item > .btn {
-    width: 120px;
+    width: 140px;
   }
 }
